# bevy-game-2

./: Cargo.toml  goals.txt
.cargo/: config
assets/sprites/Players/: MaskDude.json
assets/sprites/Players/Mask Dude/: spritesheet.json
config/: graphics.ron  rest.ron  sprites.ron
src/: animation.rs  camera.rs  coordinator.rs  enemies.rs  graphics.rs  inspector.rs  main.rs  physics.rs  player.rs  prelude.rs  sprites.rs  state.rs
