[package]
name = "bevy-game-2"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.9.1", features = ["dynamic"] }
bevy_hanabi = "0.5.0"
bevy-inspector-egui = "0.14.0"
rapier2d = { version = "0.16.1", features = ["simd-stable"] }
leafwing-input-manager = "0.7.0"
ron = "0.8.0"
serde = "1.0.148"
