[package]
name = "bevy-game-2"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.9.1", features = ["dynamic"] }
bevy_ecs_ldtk = "0.5.0"
bevy_hanabi = "0.5.1"
bevy-inspector-egui = "0.15.0"
bevy_rapier2d = { version = "0.19.0", features = [
	"simd-stable",
	"debug-render",
] }
derivative = "2.2.0"
leafwing-input-manager = "0.7.1"
ron = "0.8.0"
seldom_state = "0.3.0"
serde = "1.0.150"
